--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,14 @@
       "ecmaVersion": 11,
       "sourceType": "module"
     },
-    "parser": "babel-eslint",
+    // "parser": "babel-eslint",
     "env": {
       "es6": true,
       "browser": true,
       "jest": true
     },
     "plugins": [
-      "babel",
+      // "babel",
       "react"
     ],
     "extends": [
@@ -78,8 +78,8 @@
           }
         }
       ],
-      "array-bracket-spacing": "error",
-      "babel/no-invalid-this": 1,
-      "babel/semi": 0
+      "array-bracket-spacing": "error"
+      // "babel/no-invalid-this": 1,
+      // "babel/semi": 0
     }
   }
